# gogogo

./: .air.toml  .gitignore  .golangci.yml  .pre-commit-config.yaml  README.md  api_1.go  api_1.py  api_3.go  go.mod  go.sum  pyproject.toml
.github/workflows/: ci.yml  ci_py.yml
cmd/api/v1/: main.go  main_test.go
cmd/api/v2/: main.go
cmd/api/v4/: api_4.go
cmd/api_v1/: main.go  main_test.go
cmd/ingest/: main.go
cmd/writer/: dataframe_test.go  main.go  main_test.go
pkg/: go.mod  go.sum
pkg/datarizer/: dataframe.go  dataframe_test.go
userator/: api_1.py  test_api1.py
